# Virtual-File-System

./: CMakeLists.txt  readme.md
documentation/: Design Document.md  Specification Document.md
include/: CommandProcessor.h  ErrorHandling.h  FileSystemDataStructure.h  FileSystemOperations.h  UserInterface.h
src/: CommandProcessor.cpp  ErrorHandling.cpp  FileSystemDataStructure.cpp  FileSystemOperations.cpp  UserInterface.cpp  main.cpp
src/Utility/: TreeNode.h
